--- a/src/main/webapp/WEB-INF/templates/roomsList.html
+++ b/src/main/webapp/WEB-INF/templates/roomsList.html
@@ -33,10 +33,10 @@
                         <tbody>
                         <th:block th:each="room : ${roomsList}">
                             <tr>
-                                <th th:text="${room.roomId}" scope="row">1</th>
+                                <th th:text="${room.roomID}" scope="row">1</th>
                                 <td th:text="${room.roomNumber}"></td>
                                 <td th:text="${room.capacity}"></td>
-                                <td th:text="${room.classId}"></td>
+                                <td th:text="${room.classID}"></td>
                                 <td th:text="${room.price}"></td>
                             </tr>
                         </th:block>
