--- a/src/main/webapp/WEB-INF/templates/admin.html
+++ b/src/main/webapp/WEB-INF/templates/admin.html
@@ -61,6 +61,7 @@
             </div>
             <div class="card-footer">
                 <a th:href="@{/index}" class="btn btn-info float-left">User menu</a>
+                <a th:href="@{/roomseditor}" class="btn btn-dark float-right">Edit rooms</a>
             </div>
         </div>
     </div>
