Created ReservedRoom service and controller and moved methods related to reservedroom manipulations here.

--- a/src/main/webapp/WEB-INF/templates/allfittingrooms.html
+++ b/src/main/webapp/WEB-INF/templates/allfittingrooms.html
@@ -47,7 +47,7 @@
                                     </div>
 
                                     <input hidden th:field="*{requestID}"/>
-                                    <input hidden id="roomnumber" name="roomnumber" th:value="${room.roomNumber}">
+                                    <input hidden id="roomNumber" name="roomNumber" th:value="${room.roomNumber}">
 
                                 </form>
 
