--- a/src/main/webapp/WEB-INF/templates/rooms.html
+++ b/src/main/webapp/WEB-INF/templates/rooms.html
@@ -26,7 +26,7 @@
                         <div class="input-group-prepend">
                             <span class="input-group-text"><i class="fa fa-key"></i> </span>
                         </div>
-                        <input th:field="*{roomNumber}" name="roomnumber" type="number" class="form-control" placeholder="Room number">
+                        <input th:field="*{roomNumber}" name="roomNumber" type="number" class="form-control" placeholder="Room number">
                     </div>
                     <p class="white">Select class:</p>
                     <div class="form-group input-group">
