Added internationalization of rooms.html, roomslist.html, fixed error of link in index to page of roomslist

--- a/src/main/webapp/WEB-INF/templates/index.html
+++ b/src/main/webapp/WEB-INF/templates/index.html
@@ -66,7 +66,7 @@
                     </table>
                     <div>
                     </div>
-                    <a th:href="@{/showrooms}" class="btn btn-dark float-right"
+                    <a th:href="@{/rooms}" class="btn btn-dark float-right"
                        th:text="#{message.hotel.rooms}">Rooms</a>
                 </div>
             </div>
