--- a/src/main/webapp/WEB-INF/templates/error.html
+++ b/src/main/webapp/WEB-INF/templates/error.html
@@ -16,7 +16,7 @@
     <div class="d-flex justify-content-center h-100">
         <div class="card">
             <div>
-                <h3 id="login-header" class="text-center" th:text="#{message.error-page.header}+' '+${errorCode}">
+                <h3 id="login-header" class="text-center" th:text="#{'message.error-page.header.' + ${errorCode}}">
                     Header</h3>
             </div>
             <div th:with="errorMessage='message.error.'+${errorCode}" class="card-body">
