--- a/src/main/webapp/WEB-INF/templates/allfittingrooms.html
+++ b/src/main/webapp/WEB-INF/templates/allfittingrooms.html
@@ -47,10 +47,8 @@
                                     </div>
 
                                     <input hidden th:field="*{requestID}"/>
-                                    <input hidden id="roomNumber" name="roomNumber" th:value="${room.roomNumber}">
-
+                                    <input hidden id="roomID" name="roomID" th:value="${room.roomID}">
                                 </form>
-
                             </td>
                         </tr>
                     </th:block>
