--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -104,7 +104,8 @@ h3 {
     height: auto;
     margin-top: auto;
     margin-bottom: auto;
-    width: 900px;
+    width: auto;
+    min-width: 900px;
     background-color: rgba(0, 0, 0, 0.6) !important;
     padding-bottom: 20px;
 }
