errors in test and program are fixed

--- a/src/main/webapp/WEB-INF/templates/index.html
+++ b/src/main/webapp/WEB-INF/templates/index.html
@@ -60,7 +60,7 @@
                                        th:text="#{message.payment-status.paid}"></p>
                                 </td>
                                 <td>
-                                    <a th:href="@{'/request/delete/'+${request.requestID}}" th:text="#{message.cancel}"
+                                    <a th:href="@{'/reservation/cancel/'+${request.reservationID}}" th:text="#{message.cancel}"
                                        class="btn btn-dark float-left">cancel</a>
                                 </td>
                             </tr>
