--- a/src/main/webapp/WEB-INF/templates/allfittingrooms.html
+++ b/src/main/webapp/WEB-INF/templates/allfittingrooms.html
@@ -45,12 +45,9 @@
                                     <div class="form-group">
                                         <button type="submit" class="btn btn-primary btn-block"> Submit</button>
                                     </div>
-
                                     <input hidden th:field="*{requestID}"/>
-                                    <input hidden id="roomNumber" name="roomNumber" th:value="${room.roomNumber}">
-
+                                    <input hidden id="roomID" name="roomID" th:value="${room.roomID}">
                                 </form>
-
                             </td>
                         </tr>
                     </th:block>
