--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -11,6 +11,10 @@ html, body {
     color: #ff5a5a !important;
 }
 
+.pagination {
+    display: inline-block;
+}
+
 .paid {
     color: #00ff6a;
 }
@@ -167,7 +171,7 @@ input:focus {
 
 .btn-yellow {
     color: black;
-    background-color: #f9f814;
+    background-color: #FFC312;
     opacity: 0.9;
     width: 280px;
 }
@@ -181,7 +185,27 @@ input:focus {
 
 .btn-grey:hover {
     color:black;
-    background-color: #f9f814;
+    background-color: #FFC312;
+    opacity: 0.9;
+}
+
+.btn-yellow-small {
+    color: black;
+    background-color: #FFC312;
+    opacity: 0.9;
+    width: 30px;
+}
+
+.btn-grey-small {
+    color: white;
+    background-color: rgba(29, 29, 3, 0.2);
+    opacity: 0.9;
+    width: 30px;
+}
+
+.btn-grey-small:hover {
+    color:black;
+    background-color: #FFC312;
     opacity: 0.9;
 }
 
