--- a/src/main/webapp/WEB-INF/templates/admin.html
+++ b/src/main/webapp/WEB-INF/templates/admin.html
@@ -60,9 +60,10 @@
                     </th:block>
                     </tbody>
                 </table>
-                <div th:if="${pageNumbers.size() > 1}" class="pagination"
-                     th:each="pageNumber : ${pageNumbers}">
-                    <a th:href="@{'/admin?page='+${pageNumber}}" class="btn btn-grey-small center-align" th:text="${pageNumber}">Number</a>
+                <div th:if="${pageNumbers.size() > 1}" class="pagination">
+                    <a th:each="pageNumber : ${pageNumbers}"
+                       th:href="@{'/admin?page='+${pageNumber}}"
+                       class="btn btn-grey-small" th:text="${pageNumber}">Number</a>
                 </div>
             </div>
             <div class="card-footer">
