--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -15,6 +15,28 @@ html, body {
     color: #00ff6a;
 }
 
+.warning-msg {
+    background-color: rgba(0, 0, 0, 0.7) !important;
+    width: 500px;
+    height: 200px;
+    padding: 25px;
+    border: 2px solid #FFC312;
+    position: relative;
+    margin: auto;
+    top: 40%;
+    z-index: 2;
+}
+
+.warning-msg-bg {
+    background-color: rgba(0, 0, 0, 0.3) !important;
+    height: -webkit-fill-available;
+    width: -webkit-fill-available;
+    height: available;
+    width: available;
+    position: fixed;
+    z-index: 1;
+}
+
 .center-align {
     text-align: center;
 }
@@ -43,7 +65,6 @@ h3 {
 }
 
 .card-body {
-    padding-bottom: 0;
 }
 
 .input-group-text {
@@ -57,6 +78,7 @@ h3 {
 
 .login_btn {
     width: 150px !important;
+    color: black !important;
 }
 
 .form-group {
@@ -107,7 +129,19 @@ h3 {
     width: auto;
     min-width: 800px;
     background-color: rgba(0, 0, 0, 0.6) !important;
-    padding-bottom: 20px;
+}
+
+.reserv-buttons {
+    height: 50px;
+}
+
+table {
+    text-align: center !important;
+
+}
+
+.table td {
+    vertical-align: middle !important;
 }
 
 .social_icon span {
