Added dao, service and controller methods to address database by page

--- a/src/main/webapp/WEB-INF/templates/admin.html
+++ b/src/main/webapp/WEB-INF/templates/admin.html
@@ -40,7 +40,7 @@
                     </tr>
                     </thead>
                     <tbody>
-                    <th:block th:each="request : ${requestList}">
+                    <th:block th:each="request : ${pagedList}">
                         <tr>
                             <th th:text="${request.requestID}" scope="row">1</th>
                             <td th:text="#{'message.capacity.'+${request.capacity}}"></td>
