fixed room button

--- a/src/main/webapp/WEB-INF/templates/index.html
+++ b/src/main/webapp/WEB-INF/templates/index.html
@@ -117,8 +117,8 @@
                            th:href="@{'/index?pr_page='+${currentPrPage}+'&ur_page='+${pageNumber}}"
                            class="btn btn-grey-small" th:text="${pageNumber}">Number</a>
                     </div>
-                    <div>
-                    </div>
+                </div>
+                <div class="roomsbutton">
                     <a th:href="@{/rooms}" class="btn btn-info float-right"
                        th:text="#{message.hotel.rooms}">Rooms</a>
                 </div>
